// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BerthDetails renders normally with all props 1`] = `
<div
  class="berthDetails"
>
  <div
    class="grid cols3 grid"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        EDELLISET VUOKRALAISET
      </h4>
      <section
        class="body"
      >
        <div>
          <span
            class="text standard span"
          >
            01.01.2018 - 31.12.2018
          </span>
           
          <a
            class="internalLink brand"
            href="#/customers/0"
            title="Nimi puuttuu"
          >
            Nimi puuttuu
          </a>
        </div>
        <div>
          <span
            class="text standard span"
          >
            01.01.2019 - 31.12.2019
          </span>
           
          <a
            class="internalLink brand"
            href="#/customers/1"
            title="Testi Testinen"
          >
            Testi Testinen
          </a>
        </div>
      </section>
    </article>
    <article
      class="section comment"
    >
      <h4
        class="text standard h4 m title"
      >
        HUOMIOT
      </h4>
      <section
        class="body"
      >
        <span
          class="text standard span"
        >
          Comment
        </span>
      </section>
    </article>
    <article
      class="section"
    >
      <div
        class="sectionHeadWithButton"
      >
        <h4
          class="text standard h4 m title"
        >
          HUOLTOTYÖT (PLACEHOLDER)
        </h4>
        <button
          class="title"
          type="button"
        >
          <span
            class="text brand span"
          >
            Muokkaa
          </span>
        </button>
      </div>
      <section
        class="body"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <a
                  class="internalLink brand"
                  href="#/"
                  title="123"
                >
                  123
                </a>
              </td>
              <td>
                Portin lukko rikki
              </td>
            </tr>
            <tr>
              <td>
                <a
                  class="internalLink brand"
                  href="#/"
                  title="456"
                >
                  456
                </a>
              </td>
              <td>
                Poiju irti
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </article>
  </div>
</div>
`;

exports[`BerthDetails renders normally with minimum props 1`] = `
<div
  class="berthDetails"
>
  <div
    class="grid cols3 grid"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        EDELLISET VUOKRALAISET
      </h4>
      <section
        class="body"
      >
        -
      </section>
    </article>
    <article
      class="section comment"
    >
      <h4
        class="text standard h4 m title"
      >
        HUOMIOT
      </h4>
      <section
        class="body"
      >
        <span
          class="text standard span"
        >
          -
        </span>
      </section>
    </article>
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        HUOLTOTYÖT (PLACEHOLDER)
      </h4>
      <section
        class="body"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <a
                  class="internalLink brand"
                  href="#/"
                  title="123"
                >
                  123
                </a>
              </td>
              <td>
                Portin lukko rikki
              </td>
            </tr>
            <tr>
              <td>
                <a
                  class="internalLink brand"
                  href="#/"
                  title="456"
                >
                  456
                </a>
              </td>
              <td>
                Poiju irti
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </article>
  </div>
</div>
`;
